# chip-8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  emulator.cpp  main.cpp
src/: CMakeLists.txt  cpu.cpp  cpu.hpp  display.hpp  emulator.cpp  emulator.hpp  main.cpp  memory.cpp  memory.hpp  utils.hpp
src/headers/: cpu.hpp  display.hpp  emulator.hpp  memory.hpp  utils.hpp
tests/: CMakeLists.txt  tests.cpp
unit_tests/: CMakeLists.txt  tests.cpp
